[package]
name = "redthumb"
description = "A Reddit post thumbnail generator"
authors = ["Matt Fellenz <matt@felle.nz>"]
license = "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
atty = "0.2"
cairo-rs = { version = "0.15", default_features = false, features = ["png"] }
clap = { version = "3", features = ["derive", "unicode"] }
pango = "0.15"
pangocairo = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
